[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/logo.png" type="Texture" id=1]
[ext_resource path="res://scenes/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://fonts/paragraph.tres" type="DynamicFont" id=3]
[ext_resource path="res://objects/Menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/backgrounds/Squares.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/Credits.tscn" type="PackedScene" id=6]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="Logo" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 128.0
margin_right = -20.0
margin_bottom = -132.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 208.0
margin_bottom = -12.0

[node name="Menu" parent="Center" instance=ExtResource( 4 )]
margin_left = 288.0
margin_top = 46.0
margin_right = 352.0
margin_bottom = 94.0
rect_min_size = Vector2( 64, 48 )

[node name="Label_Copyright" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0.517647, 0.494118, 0.529412, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 3 )
text = "Â© John Gabriel 2020 | GNU GPLv3 | Vita Port withLogic"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -20.0
margin_right = -8.0
custom_colors/font_color = Color( 0.517647, 0.494118, 0.529412, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 3 )
text = "v1.0.0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="button_pressed" from="Center/Menu" to="." method="_on_Menu_button_pressed"]
[connection signal="variable_changed" from="Center/Menu" to="." method="_on_Menu_variable_changed"]
